cluster/apps/longhorn-system/longhorn/ingress-authentik/ingress-authentik.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: authentik-outpost
  namespace: longhorn-system
spec:
  type: ExternalName
  externalName: authentik.authentik.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  annotations:
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: "false"
  namespace: longhorn-system
spec:
  rules:
    - host: "longhorn.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-outpost
                port:
                  number: 80
